[package]
name = "test-mutator"
version = "0.1.0"
edition = "2021"
description = "Mutation testing library for Rust — generate mutants, run tests, and calculate mutation scores"
license = "MIT"
readme = "README.md"
keywords = ["mutation-testing", "testing", "rust", "code-quality"]
categories = ["development-tools::testing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
